--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
   background-image: url("pwb.jpg");
    background-repeat: no-repeat;
-   background-size: auto;
+   background-size: 1080px 1920px;
 }
