--- a/main.css
+++ b/main.css
@@ -1,4 +1,16 @@
-body {
+body, html {
+  height: 100%;
+}
+
+.bg {
+  /* The image used */
   background-image: url("pwb.jpg");
-   background-size: 1080px 1920px;
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
