--- a/main.css
+++ b/main.css
@@ -1,14 +1,14 @@
-body, html {
+ /* body, html {
   height: 100%;
 }
 
 .bg {
-  /* The image used */
+  /* The image used 
   background-image: url("pwb.jpg");
 
-  /* Full height */
+  /* Full height 
   height: 100%;
-  width: 100%;
+  width: 100%;  */
 
   /* Center and scale the image nicely 
   background-position: center;
