--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
  /* body, html {
-  height: 100%;
+  height: 100%; */
 }
 
 .bg {
-  /* The image used 
+  /* The image used */
   background-image: url("pwb.jpg");
 
   /* Full height 
